fixed: dark theme contract function groups unreadable, resolves #284

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -36,7 +36,7 @@ body {
 
   &.dark {
     background: #2d224d;
-    *:not(a):not(input):not(select):not(option):not(textarea):not(.code):not(.switch__icon):not(b):not(.btn) {
+    *:not(a):not(input):not(select):not(option):not(optgroup):not(textarea):not(.code):not(.switch__icon):not(b):not(.btn) {
       color: #eee !important;
     }
 
